# 1k-validators-candidate-verification

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.circleci/: config.yml
candidate-verifier/: Dockerfile
candidate-verifier/config/: kusama_candidates.yml  service.yml
candidate-verifier/src/: jury.rs
charts/1k-candidate-verifier/: Chart.yaml  values.yaml
charts/1k-candidate-verifier/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
config/: service.telemetry_watcher.yml  service.yml
helmfile.d/: 05-mongodb.yaml  10-1k-candidate-verifier.yaml
helmfile.d/config/: 1k-candidate-verifier.yaml.gotmpl  mongodb.yaml.gotmpl
scripts/: integration-tests.sh
src/: api.rs  database.rs  events.rs  judge.rs  jury.rs  lib.rs  system.rs
staking-watcher/: Cargo.toml
staking-watcher/config/: config.yml
staking-watcher/src/: chaindata.rs  database.rs  lib.rs  main.rs
telemetry-tracker/: Cargo.toml
telemetry-tracker/config/: json.json  polkadot_candidates.yml  service.yml
telemetry-tracker/src/: client.rs  database.rs  events.rs  judge.rs  jury.rs  lib.rs  state.rs  system.rs
