[package]
name = "candidate-verifier"
version = "0.1.0"
authors = ["lamafab <42901763+lamafab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "candidate-verifier"
path = "src/bin/candidate_verifier.rs"

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
futures = "0.3.12"
thiserror = "1.0.24"
anyhow = "1.0.38"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
serde_yaml = "0.8.17"
mongodb = "2.0.0-alpha"
bson = "1.2.0"
substrate-subxt = { git = "https://github.com/lamafab/substrate-subxt.git", branch = "pallet-identity" }
sp-arithmetic = "3.0.0"
actix-web = "4.0.0-beta.3" 
