[package]
name = "staking-watcher"
version = "0.1.0"
authors = ["lamafab <42901763+lamafab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "reward-claim-generator"
path = "src/main.rs"

[dependencies]
env_logger = "0.8.3" 
log = "0.4.14"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.12"
anyhow = "1.0.38"
serde = { version = "1.0.123", features = ["derive"] }
serde_yaml = "0.8.17"
reqwest = { version = "0.11.1", features = ["json"] }
substrate-subxt = "0.14.0"
parity-scale-codec = "1.3.6"
prettytable-rs = "0.8.0"
