[package]
name = "telemetry-tracker"
version = "0.1.0"
authors = ["lamafab <42901763+lamafab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
futures = "0.3.12"
anyhow = "1.0.38"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
